fixed spinner alignment

--- a/src/assets/toolkit/styles/components/_modals.scss
+++ b/src/assets/toolkit/styles/components/_modals.scss
@@ -31,6 +31,7 @@
 
 .c-Modal__spinner {
   display: table-cell;
+  text-align: right;
 }
 
 .c-Modal__body, .c-Modal__footer {
